kcms/keyboard: Fuzzy search for layouts

Implements scored fuzzy search for layouts using
KFuzzyMatcher.

BUG: 500053